# mace_bcc_test

./: README.md  figures.ipynb  figures_second_version.ipynb  figures_second_version_alex.ipynb  pyproject.toml
data/: eos_DFT_Mo.csv  eos_DFT_Nb.csv  eos_DFT_W.csv  gamma_line_DFT_screw_Mo_0.csv  gamma_line_DFT_screw_Mo_1.csv  gamma_line_DFT_screw_Nb_0.csv  gamma_line_DFT_screw_Nb_1.csv  gamma_line_DFT_screw_W_0.csv  gamma_line_DFT_screw_W_1.csv  junction_glide_neb_QMMM_Mo.csv  screw_dislocation_glide_DFT_Mo.csv  screw_dislocation_glide_DFT_Nb.csv  screw_dislocation_glide_DFT_W.csv
results/: MACE-MP_sia_formation_energies.csv  MACE-MP_vac_formation_energies.csv  README.md  SIA_formation_energy_A13_MD_W.csv  SIA_formation_energy_mace-mp-alex_W.csv  SIA_formation_energy_mp-0b3-medium_Mo.csv  SIA_formation_energy_mp-0b3-medium_W.csv  SIA_relaxed_MACE-MP-0-medium_Mo.xyz  SIA_relaxed_MACE-MP-0-medium_Nb.xyz  SIA_relaxed_MACE-MP-0-medium_W.xyz  SIA_relaxed_mp-0b3-medium_Mo.xyz  SIA_relaxed_mp-0b3-medium_Nb.xyz  SIA_relaxed_mp-0b3-medium_W.xyz  cyl_Mo_junction110_glide_neb_mp-0b3-medium.xyz  cyl_Mo_junction_glide_neb_mace-mp-alex.xyz  cyl_Mo_junction_glide_neb_mp-0b3-medium.xyz  cyl_Mo_screw_glide_neb_MACE-MP-0-medium_degenerate.xyz  cyl_Mo_screw_glide_neb_mace-mp-alex.xyz  cyl_Mo_screw_glide_neb_mp-0b3-medium.xyz  cyl_Nb_junction110_glide_neb_mp-0b3-medium.xyz  cyl_Nb_junction_glide_neb_MACE-MP-0-medium.xyz  cyl_Nb_junction_glide_neb_mace-mp-alex.xyz  cyl_Nb_junction_glide_neb_mp-0b3-medium.xyz  cyl_Nb_screw_glide_neb_MACE-MP-0-medium_degenerate.xyz  (+112 more)
scripts/: plot_neb_mpl.py  (+2 more)
(+2 files in other folders)
